--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,8 @@ font-size: large;
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+.profileImg{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
