--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ color:rgb(11, 93, 103);
 font-size: large;
 }
 .loader{
-    border: 16px solid #f3f3f3; /* Light grey */
+  border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #0d7d91; /* Blue */
   border-radius: 50%;
   width: 120px;
@@ -77,4 +77,17 @@ font-size: large;
 }
 #wel{
   font-size:25px;
+}
+@media screen and (max-width: 700px) {
+  h1{
+    font-size:150%;
+  }
+}
+@media screen and (max-width: 500px) {
+  h1{
+    font-size:28px;
+  }
+  nav a {
+font-size: small;
+}
 }
