--- a/src/components/Users.css
+++ b/src/components/Users.css
@@ -1,14 +1,10 @@
-.grid-container{
-  display: grid;
-  grid-template-columns: auto auto auto;
+.grid-container-user{
   background-color: #affffb;
-  padding: 10px;
-}
-grid-item{
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
- 
+  align-items:flex-wrap;
+  padding: 5px;
+  margin: 5px;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
 }
