--- a/src/components/Article.css
+++ b/src/components/Article.css
@@ -1,4 +1,4 @@
-.article-card-container {
+.article-card-container2 {
   display: grid;
   margin: 15px auto;
   border: 2px solid rgb(41, 176, 151);
@@ -15,4 +15,35 @@ a:hover{
   background-color: rgb(55, 213, 210);
   border-radius: 20px;
   padding: 10px;
+}
+
+@media screen and (max-width: 700px) {
+  h1{
+    font-size:150%;
+    margin-top:40px;
+  }
+  .sideBarLinks{
+  font-size:16px;
+}
+.article-card-container2{
+    width:50%;
+  }
+
+}
+@media screen and (max-width: 500px) {
+  h1{
+    font-size:28px;
+    margin-top:50px;
+  }
+  nav a {
+font-size: small;
+}
+.article-card-container2{
+    width:30%;
+  }
+.sideBarLinks{
+  font-size:12px;
+  color:black;
+}
+
 }
