--- a/src/App.css
+++ b/src/App.css
@@ -79,9 +79,9 @@ font-size: large;
   font-size:25px;
 }
 @media screen and (max-width: 700px) {
-  h1{
-    font-size:150%;
-    margin-top:40px;
+  header h1{
+    font-size:30px;
+    margin-top:50px;
   }
   .sideBarLinks{
   font-size:16px;
@@ -95,9 +95,9 @@ font-size: large;
 
 }
 @media screen and (max-width: 500px) {
-  h1{
-    font-size:28px;
-    margin-top:50px;
+  header h1{
+    font-size:20px;
+    margin-top:60px;
   }
   nav a {
 font-size: small;
