--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -7,7 +7,7 @@ input {
   display: flex;
   align-items: center;
   margin: 20% auto;
-  background-color: rgb(25, 140, 140);
+  background-color: #5ec5be;
   width: 500px;
   height: 200px;
   border-radius: 5px;
